--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ main {
     padding: 20px; /* Add padding inside the main container */
     background-color: #f2a391; /* Light terracotta background color */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow for separation */
-    border-radius: 8px; /* Optional: Rounding the corners */
+    border-radius: 8px; /* Rounding the corners */
     border: 2px solid #000;
     box-shadow: 5px 10px 5px black;
 }
