--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
 h1 {
     font-weight: 400;
     font-style: normal;
+    text-align: center;
 }
 
 main {
@@ -46,7 +47,7 @@ main {
 }
 
 .app img{
-    width: 100%;
+    width: 70%;
 }
 
 #aboutMe {
@@ -79,6 +80,12 @@ main {
     max-width: 100px; /* Adjust the image size */
     height: auto;
     display: block;
+}
+.large-image {
+    width: 300px; /* Set a larger width */
+    height: auto; /* Maintain aspect ratio */
+    display: block;
+    margin: 0 auto; /* Center the image */
 }
 
 #apps {
@@ -128,5 +135,8 @@ main {
     display: block;
     margin: 10px 0; /* Add some space around the image */
     cursor: pointer; /* Changes the cursor to a pointer when hovering over the image */
+
+}
+.contacts {
 
 }
