--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,19 +49,6 @@ main {
     box-shadow: 5px 10px 5px black;
 }
 
-.app{
-    width: 40%;
-    border: 2px solid #000;
-    border-radius: 8px;
-    padding: 10px;
-    text-align: center;
-
-}
-
-.app img{
-    width: 100%;
-}
-
 #aboutMe {
     font-size: 1.5rem;
     margin-bottom: 20px;
@@ -78,27 +65,31 @@ main {
     margin: 0 auto;
 }
 
-.card {
-    width: 30%;
-    border-radius: 12px;
-    overflow: hidden;
-    text-align: center; /* Center align text below the images */
-}
-
-.card img {
-    max-width: 100px; /* Adjust the image size */
-    height: auto;
-    display: block;
-}
-
 #apps {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px; /* Space between images */
     justify-content: space-around;
 }
 
+.app{
+    width: 300px;
+    border: 2px solid #000;
+    border-radius: 8px;
+    text-align: center;
+
+}
+
+.app img{
+    width: 100%;
+    height: 350px;
+    border-radius: 8px 8px 0 0;
+}
+
 .info {
-    margin-top: 20px;
+    background: #1f1b1b;
+    color: white;
+    border: 1px solid black;
 }
 
 .project {
@@ -141,11 +132,29 @@ main {
 }
 
 .details > div {
-    height: 0;
-    overflow: hidden;
     transition: height 1s;
 }
-
-.details:hover > div {
+/* 
+.details:hover > div, .details:active > div{
     height: 200px;
+} */
+
+.h200{
+    height: 250px;
+    overflow: hidden;
+}
+
+.h0{
+    height: 0px;
+    overflow: hidden;
+}
+
+h2 {
+    color: blue;
+    margin: 3px;
+    text-decoration: underline;
+}
+
+/* :root * {
+    border: 1px solid black; */
 }
