worked on apps and divider

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,19 @@ h1 {
     padding: 5%;
 }
 
+#bg1 h1 {
+    font-size: 5rem;
+    height: 10rem;
+    background: linear-gradient(39deg, transparent 0%, black 80%, black 85%, orange 85%, orange 88%, black 88%);
+}
+
+#bg1 main {
+    background: #03A9F4;
+    width: 97%;
+}
+
 main {
-    max-width: 1200px;
+    width: 85%;
     margin: 20px auto;
     padding: 20px;
     background-color: #f2a391;
@@ -111,7 +122,7 @@ main {
 }
 
 .info {
-    background: #07d0f3bd;
+    background: #435d59bd;
     color: white;
     border-radius: 8px;
     height: 20%;
